Fix: Card contrast bg color with background

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -74,7 +74,6 @@ aside {
 li.footer-primary__item {
   font-size: var(--font-size-fluid-00);
   font-weight: var(--font-weight-4);
-  /* color: var(--color-text-primary); */
 }
 
 .footer-nav-heading {
@@ -220,12 +219,12 @@ components/cards
 .card {
   display: flex;
   flex-direction: column;
-  border-radius: var(--radius-conditional-3);
-  /* border: var(--border-size-1) solid var(--gray-1); */
-  padding: var(--size-fluid-3);
+  border-radius: var(--radius-conditional-4);
+  padding: var(--size-fluid-4);
   box-shadow: var(--shadow-2);
   position: relative;
   animation: var(--animation-fade-in) 1s;
+  background-color: var(--surface-2);
 }
 
 .card:hover {
